--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Pravinda Perera</h1>
-      <p>I'm <span class="typed" data-typed-items="An Engineering Manager, A Software Architect, A Passionate Software Engineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="An Engineering Manager, A Software Architect, A Passionate Software Engineer, A Software Engineering Scholar"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +77,16 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am a self-motivated, energetic, and inquisitive individual currently managing 3 engineering teams,
+            with a total of 30+ onshore and offshore software engineers at Sysco. I am passionate about leading engineering teams to build scalable, reliable,
+            and maintainable software. Additionally, I am dedicated to training and mentoring engineers, helping them excel in their careers.
+          </p>
+          <br>
+          <p>
+            Full-stack developer and an Engineering Manager with product management, people management, and leadership skills.
+            Hands-on experience in frontend, backend, data engineering, and DevOps engineering in terms of building and managing, scalable, reliable,
+            and maintainable web, mobile, and machine learning-based solutions.
+          </p>
         </div>
 
         <div class="row">
@@ -85,32 +94,35 @@
             <img src="assets/img/pravinda-small.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Engineering Manager &amp; Software Architect</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Inquisitive individual with multidisciplinary experiences holding an MSc & BSc (Hons) in Computer Science and Engineering from the University of Moratuwa.
+              CIMA passed finalist.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+<!--                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 July 1992</span></li>-->
+<!--                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1-512-975-0005</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Austin, Texas, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Experience:</strong> <span>7+ Years</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+<!--                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>-->
+                  <li><i class="bi bi-chevron-right"></i> <strong>MSc:</strong> <span>Master of Science (MSc) - Computer Science and Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>BSc:</strong> <span>Bachelor's Degree (BSc) Honours - Computer Science and Engineering</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>pravinda92@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              Previously held the responsibility of managing the engineering team building Sysco Delivery; the delivery tracking platform of the world’s largest broadline food distributor.
+              I provided technical and architectural leadership, in addition to managing the engineering team, for the development of web and mobile-based delivery applications
+              as well as the design and development of the complex delivery time prediction models at Sysco,
+              which have been effectively employed to process Sysco's delivery information in both the US and Canada.
             </p>
           </div>
         </div>
@@ -123,41 +135,41 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Professional Accomplishments</h2>
+<!--          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>-->
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="count-box">
-              <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="count-box">
-              <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <i class="bi bi-laptop"></i>
+              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Years of Experience</strong></p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <span data-purecounter-start="0" data-purecounter-end="31" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Direct Reports</strong></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+              <i class="bi bi-journal-richtext"></i>
+              <span data-purecounter-start="0" data-purecounter-end="70" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Enterprise Grade Projects</strong></p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="count-box">
+              <i class="bi bi-award"></i>
+              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Scholarly Articles & Awards</strong></p>
             </div>
           </div>
 
