added awards section

--- a/index.html
+++ b/index.html
@@ -436,12 +436,11 @@
             <div class="resume-item">
               <h4>The Analyzer: Clustering Based System for Improving Business Productivity by Analyzing User Profiles to Enhance Human-Computer Interaction</h4>
               <h5>October 23-24, 2023, Houston, United States</h5>
-              <p><em>ICMSCHI 2023: 17. International Conference on Multimedia Systems and Computer-Human Interaction</em></p>
+              <p><em>ICMSCHI 2023: 17th International Conference on Multimedia Systems and Computer-Human Interaction</em></p>
               <ul>
                 <li> Published in:<a href="https://publications.waset.org/10013306/pdf" target="_blank">
                   World Academy of Science, Engineering and Technology International Journal of Computer and Information Engineering Vol:17, No:10, 2023</a></li>
-                <li> Awarded:<a href="https://waset.org/doc/best-paper-certificate/168329" target="_blank">
-                  Best Paper</a></li>
+                <li> Awarded: Best Paper</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -482,6 +481,38 @@
             </div>
 
             <h3 class="resume-title">Awards</h3>
+            <div class="resume-item">
+              <h4>Best Paper Award</h4>
+              <h5>October 23-24, 2023, Houston, United States</h5>
+              <p><em>Awarded: "Best Paper" award at the <a href="https://waset.org/multimedia-systems-and-computer-human-interaction-conference-in-october-2023-in-houston" target="_blank">
+                ICMSCHI 2023: 17th International Conference on Multimedia Systems and Computer-Human Interaction</a></em></p>
+
+
+            </div>
+
+            <div class="resume-item">
+              <h4><p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a></em></p> HOF Awards 2020 - 2nd runner-up</h4>
+              <h5>2020</h5>
+              <p><em>Hall of Fame Awards - 2nd runner-up award for Sysco Delivery application</em></p>
+            </div>
+
+            <div class="resume-item">
+              <h4><p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a></em></p> Customer First Award</h4>
+              <h5>2020</h5>
+              <p><em>Customer First Award for Sysco Delivery application</em></p>
+            </div>
+
+            <div class="resume-item">
+              <h4><p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a></em></p> HOF Awards 2020 - 1st runner-up</h4>
+              <h5>2019</h5>
+              <p><em>Hall of Fame Awards - 1st runner-up award for Sysco Delivery application</em></p>
+            </div>
+
+            <div class="resume-item">
+              <h4><p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a></em></p>  IoT HaCKATHON 2017 - 1st runner-up</h4>
+              <h5>2017</h5>
+              <p><em>Member of the team placed 1st runner-up</em></p>
+            </div>
 
           </div>
 
