skills added to the resume section

--- a/index.html
+++ b/index.html
@@ -432,6 +432,39 @@
               </ul>
             </div>
 
+            <h3 class="resume-title">Skills</h3>
+            <div class="resume-item">
+              <h4>Programming</h4>
+              <h5>Node JS</h5>&nbsp;<h5>Java</h5>&nbsp;<h5>GraphQL</h5>&nbsp;<h5>React</h5>&nbsp;<h5>React Native</h5>
+              <br>
+              <h5>Python</h5>&nbsp;<h5>PHP</h5>&nbsp;<h5>C</h5>&nbsp;<h5>C#</h5>&nbsp;<h5>PL/SQL</h5>&nbsp;<h5>TypeScript</h5>
+            </div>
+
+            <div class="resume-item">
+              <h4>Technologies & Tools</h4>
+              <h5>AWS</h5>&nbsp;<h5>Kafka</h5>&nbsp;<h5>Apollo Studio</h5>&nbsp;<h5>Scikit-learn</h5>
+              <br>
+              <h5>Spring</h5>&nbsp;<h5>Dropwizard</h5>&nbsp;<h5>Symfony</h5>&nbsp;<h5>Expo</h5>&nbsp;<h5>Selenium</h5>&nbsp;<h5>K6</h5>
+              <br>
+              <h5>Maven</h5>&nbsp;<h5>Gradle</h5>&nbsp;<h5>Git</h5>&nbsp;<h5>GitHub</h5>&nbsp;<h5>Bitbucket</h5>&nbsp;<h5>JFrog</h5>
+              <br>
+              <h5>Docker</h5>&nbsp;<h5>Rancher</h5>&nbsp;<h5>Jenkins</h5>&nbsp;<h5>GoCD</h5>&nbsp;<h5>Dynatrace</h5>&nbsp;<h5>Datadog</h5>
+              <br>
+              <h5>MySQL</h5>&nbsp;<h5>MongoDB</h5>&nbsp;<h5>PostgreSQL</h5>&nbsp;<h5>DynamoDB</h5>&nbsp;<h5>Firebase</h5>
+              <br>
+              <h5>SQLite</h5>&nbsp;<h5>Redis</h5>&nbsp;<h5>pgAdmin</h5>
+              <br>
+              <h5>Apigee</h5>&nbsp;<h5>Swagger</h5>&nbsp;<h5>Keras</h5>&nbsp;<h5>Jupyter Notebook</h5>&nbsp;<h5>Postman</h5>
+              <br>
+              <h5>Figma</h5>&nbsp;<h5>Jira</h5>&nbsp;<h5>Trello</h5>&nbsp;<h5>Confluence</h5>
+            </div>
+
+            <div class="resume-item">
+              <h4>Other</h4>
+              <h5>Leadership & Team Management</h5>&nbsp;<h5>Technical Competence</h5>&nbsp;<h5>Project Management</h5>&nbsp;<h5>Communication Skills</h5>&nbsp;<h5>Stakeholder Management</h5>&nbsp;
+              <h5>Strategic Thinking</h5>&nbsp;<h5>Adaptability</h5>&nbsp;<h5>Decision-Making</h5>&nbsp;<h5>Empathy & Emotional Intelligence</h5>&nbsp;<h5>Mentoring and Coaching</h5>&nbsp;<h5>Customer Focus</h5>
+            </div>
+
             <h3 class="resume-title">Research Publications</h3>
             <div class="resume-item">
               <h4>The Analyzer: Clustering Based System for Improving Business Productivity by Analyzing User Profiles to Enhance Human-Computer Interaction</h4>
@@ -486,8 +519,6 @@
               <h5>October 23-24, 2023, Houston, United States</h5>
               <p><em>Awarded: "Best Paper" award at the <a href="https://waset.org/multimedia-systems-and-computer-human-interaction-conference-in-october-2023-in-houston" target="_blank">
                 ICMSCHI 2023: 17th International Conference on Multimedia Systems and Computer-Human Interaction</a></em></p>
-
-
             </div>
 
             <div class="resume-item">
