--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <img src="assets/img/pravinda-small.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Pravinda Perera</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/pravinda/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://scholar.google.com/citations?user=L_dO7SQAAAAJ&hl=en&authuser=1" class="graduation"><i class='bx bxs-graduation' ></i></a>
+          <a href="https://www.linkedin.com/in/pravinda/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://scholar.google.com/citations?user=L_dO7SQAAAAJ&hl=en&authuser=1" class="graduation" target="_blank"><i class='bx bxs-graduation' ></i></a>
 <!--          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
 <!--          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
 <!--          <a href="#" class="google-scholar"><i class="bx bxl-google-scholar"></i></a>-->
