--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <li>Leading the engineering & architectural discussions with Sysco Canada, Sysco specialty companies, and Core Enterprise Teams in internationalizing Sysco Shop application.</li>
                 <li>Leading the personalization initiative in transforming Sysco Shop with personalized content.</li>
                 <li>Providing architectural guidance to the teams on all design and implementation work.</li>
-                <li>Manage and support 15 components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>
+                <li>Manage and support 15+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>
                 <li>Manage engineers and teams in the United States, Canada, Sri Lanka and India for multiple major initiatives.</li>
 <!--                <li>Contributed to the recruitment process by conducting 25+ engineering interviews during the past 6 months.</li>-->
 <!--                <li>Conducts bi-weekly one-on-one discussions with each team member and 10+ performance appraisals annually.</li>-->
@@ -291,17 +291,29 @@
 
             <div class="resume-item">
               <h4>Engineering Manager & Senior Technical Lead</h4>
-              <h5>August 2021 - June 2022</h5>
+              <h5>December 2021 - June 2022</h5>
               <p><em><a href="https://www.sysco.com/" target="_blank">Sysco</a> - United States</em></p>
               <ul>
-                <li>Managed & provided technical & architectural leadership for a team of 11 engineers at Sysco working towards
-                  internationalizing Sysco Shop application (process around USD 30B orders).</li>
-                <li>Managed & supported 34 services including Java, NodeJS & Python microservices, react web application & react native mobile application.</li>
-                <li>Led the engineering & architectural discussions with Sysco Canada and Core Enterprise Teams in launching Sysco Shop application in Canada.</li>
-                <li>Designed and developed Kafka consumers, Java and GraphQL-based services to expose streamed data to Sysco Shop.</li>
-                <li>One of the key contributors to the Sysco-Shop platform technical & architectural designs.</li>
+                <li>Managed & provided technical & architectural leadership for two engineering teams (total of 21 engineering direct reports) at Sysco, working towards
+                  internationalizing & personalizing Sysco Shop application (process around USD 30B orders).</li>
+                <li>Designed, developed, managed and supported 15+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>                <li>Led the engineering & architectural discussions with Sysco Canada and Core Enterprise Teams in launching Sysco Shop application in Canada.</li>
+                <li>One of the key contributors to the Sysco-Shop platform technical & architectural designs
+                  (designing the graphQL based data orchestration layer, downstream microservices, Shop platform data layer, kafka based consumers).</li>
 <!--                <li>Conducted bi-weekly one-on-one discussions with each team member.</li>-->
 <!--                <li>Contributed to the recruitment process by conducting 15+ engineering interviews.</li>-->
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Engineering Manager & Senior Technical Lead</h4>
+              <h5>August 2021 - November 2021</h5>
+              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <ul>
+                <li>Managed & provided technical & architectural leadership for a team of 11 engineers at Sysco LABS Technologies working towards
+                  transforming Sysco Shop application to an e-commerce application as well as Sysco Delivery application feature enhancements.</li>
+                <li>Designed, developed, managed & supported 34 services including Java, NodeJS & Python microservices, react web application & react native mobile application.</li>
+                <!--                <li>Conducted bi-weekly one-on-one discussions with each team member.</li>-->
+                <!--                <li>Contributed to the recruitment process by conducting 15+ engineering interviews.</li>-->
               </ul>
             </div>
 
