--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
               <ul>
                 <li>Currently managing & providing technical & architectural leadership for onshore and offshore engineering teams (31 engineers)
                   at Sysco, working towards internationalizing Sysco Shop application (process around USD 30B orders) which is the next-gen e-commerce platform for Sysco.</li>
-                <li>Leading the engineering & architectural discussions with Sysco Canada, Sysco specialty companies, and Core Enterprise Teams in internationalizing Sysco Shop application.</li>
+                <li>Leading the engineering & architectural discussions with Sysco Canada, Sysco speciality companies, and Core Enterprise Teams in internationalizing Sysco Shop application.</li>
                 <li>Leading the personalization initiative in transforming Sysco Shop with personalized content.</li>
                 <li>Providing architectural guidance to the teams on all design and implementation work.</li>
-                <li>Manage and support 15+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>
+                <li>Design, develop, manage and support 20+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>
                 <li>Manage engineers and teams in the United States, Canada, Sri Lanka and India for multiple major initiatives.</li>
 <!--                <li>Contributed to the recruitment process by conducting 25+ engineering interviews during the past 6 months.</li>-->
 <!--                <li>Conducts bi-weekly one-on-one discussions with each team member and 10+ performance appraisals annually.</li>-->
@@ -348,7 +348,7 @@
               <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li> Successfully managed and provided technical leadership in performing a major backend re-architecture impacting 20+ components.
-                  Directly worked with the Head of Engineering for Sysco LABS Technologis - Customer Experience division on the re-architecture initiative
+                  Directly worked with the Head of Engineering for Sysco LABS Technologies - Customer Experience division on the re-architecture initiative
                   while leading the team to complete the re-architecture initiative (re-architect the system to process around 320,000 deliveries every minute).</li>
                 <li> Designed and developed the delivery Expected Time of Arrival (ETA) prediction engine for Sysco Delivery
                   platform which contained Machine Learning (ML) and mathematical models to predict: the time spent by a driver in each restaurant,
@@ -507,21 +507,21 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Shapelets and Parallel Coordinates Based Automated Query Generation for Complex Event Processing</h4>
-              <h5>December 16-18, 2016, Chengdu, China</h5>
-              <p><em>2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em></p>
-              <ul>
-                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:Ade32sEp0pkC" target="_blank">
-                  2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</a></li>
-              </ul>
-            </div>
-            <div class="resume-item">
               <h4>Automated Query Generation for Complex Event Processing: A Shapelets, Parallel Coordinates, and Clustering Based Approach</h4>
               <h5>July, 2017</h5>
               <p><em>International Journal of Computing and Digital Systems</em></p>
               <ul>
                 <li> Published in:<a href="https://pdfs.semanticscholar.org/b0cd/ae061955590d07634a161e838ff30a1aeaf1.pdf" target="_blank">
                   International Journal of Computing and Digital Systems Vol:6, No:04, 2017</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Shapelets and Parallel Coordinates Based Automated Query Generation for Complex Event Processing</h4>
+              <h5>December 16-18, 2016, Chengdu, China</h5>
+              <p><em>2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em></p>
+              <ul>
+                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:Ade32sEp0pkC" target="_blank">
+                  2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</a></li>
               </ul>
             </div>
 
