--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Pravinda Perera</h1>
-      <p>I'm <span class="typed" data-typed-items="An Engineering Manager, A Software Architect, A Passionate Software Engineer, A Software Engineering Scholar"></span></p>
+      <p>I'm <span class="typed" data-typed-items="An Engineering Lead, A Software Architect, A Software Engineering Scholar"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -77,7 +77,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a self-motivated, energetic, and inquisitive individual currently managing 3 engineering teams,
+          <p>I am a self-motivated, energetic, and inquisitive individual currently leading 3 engineering teams,
             with a total of 30+ onshore and offshore software engineers at <a href="https://www.sysco.com/" target="_blank">Sysco</a>. I am passionate about leading engineering teams to build scalable, reliable,
             and maintainable software. Additionally, I am dedicated to training and mentoring engineers, helping them excel in their careers.
           </p>
