updating the about, prof. accomlpishments and skills sections

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Pravinda Perera</title>
   <meta content="" name="description">
@@ -77,15 +77,26 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a self-motivated, energetic, and inquisitive individual currently leading 3 engineering teams,
-            with a total of 30+ onshore and offshore software engineers at <a href="https://www.sysco.com/" target="_blank">Sysco</a>. I am passionate about leading engineering teams to build scalable, reliable,
-            and maintainable software. Additionally, I am dedicated to training and mentoring engineers, helping them excel in their careers.
+
+          <p>Currently providing engineering leadership to onshore and offshore engineering teams (30+ engineers) at <em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a></em>.</p>
+          </br>
+          <p>Leading the engineering teams in designing, developing, and supporting a Kafka-based streaming platform, a Java/Node.js services layer, and a GraphQL-based orchestration layer, 
+            with a focus on three of the most critical domains in Sysco's next-gen e-commerce platform (USD 50B+ revenue):</p>
+            <ul style="margin-left: 40px;">
+                <li>Ordering</li>
+                <li>Third-party seller integrations</li>
+                <li>Specialty company integrations</li>
+            </ul>
+
+          <p>
+            Engineering Lead, Software Architect, and Full-Stack Developer 
+            with hands-on experience in technical leadership, people management, and product management. Proficient in frontend, backend, and data engineering, 
+            with expertise in designing, developing, and delivering scalable, reliable, and maintainable web, mobile, and machine learning-based solutions.
           </p>
           <br>
           <p>
-            Full-stack developer and an Engineering Manager with product management, people management, and leadership skills.
-            Hands-on experience in frontend, backend, data engineering, and DevOps engineering in terms of building and managing, scalable, reliable,
-            and maintainable web, mobile, and machine learning-based solutions.
+            While working in the software engineering industry, I successfully completed my MSc in Computer Science and Engineering 
+            and actively engaged in self-driven research projects that resulted in publications and contributions to academia.
           </p>
         </div>
 
@@ -94,10 +105,10 @@
 <!--            <img src="assets/img/pravinda-small.jpeg" class="img-fluid" alt="">-->
 <!--          </div>-->
           <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Engineering Manager &amp; Software Architect</h3>
+            <h3>Software Architect &amp; Engineering Lead </h3>
             <p class="fst-italic">
-              Inquisitive individual with multidisciplinary experiences holding an MSc & BSc (Hons) in Computer Science and Engineering from the University of Moratuwa.
-              CIMA passed finalist.
+              An inquisitive individual with multidisciplinary experiences holding an MSc & BSc (Hons) in <em><a href="https://cse.mrt.ac.lk/" target="_blank">Computer Science and Engineering from the University of Moratuwa</a></em>.
+              <em><a href="https://www.aicpa-cima.com/home" target="_blank">CIMA</a></em> passed finalist.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -119,10 +130,16 @@
               </div>
             </div>
             <p>
-              Previously held the responsibility of managing the engineering team building Sysco Delivery; the delivery tracking platform of the world’s largest broadline food distributor.
-              I provided technical and architectural leadership, in addition to managing the engineering team, for the development of web and mobile-based delivery applications
-              as well as the design and development of the complex delivery time prediction models at Sysco,
-              which have been effectively employed to process Sysco's delivery information in both the US and Canada.
+              Previously held the responsibility of leading the engineering team building Sysco Delivery; 
+              the delivery tracking platform of the world’s largest broadline food distributor. 
+              I provided technical and architectural leadership, to the engineering team, for the development of web and mobile-based delivery applications 
+              as well as the design and development of the complex delivery time prediction models at Sysco, 
+              which have been effectively used to predict Sysco delivery arrival times for deliveries happening in both the US and Canada.
+            </p>
+            <p>
+              Played a key role in leading the engineering and architectural discussions with Sysco Canada, Sysco's specialty companies, and Core Enterprise teams.
+              Led engineering teams in designing and developing products, accounts, and personalization features for Sysco Shop to support its launch in Canada 
+              as well as to onboard Sysco's specialty companies to Sysco Shop Platform.
             </p>
           </div>
         </div>
@@ -152,7 +169,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="31" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Direct Reports</strong></p>
             </div>
           </div>
@@ -168,7 +185,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-award"></i>
-              <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Scholarly Articles & Awards</strong></p>
             </div>
           </div>
@@ -192,7 +209,7 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Engineering Management<i class="val">95%</i></span>
+              <span class="skill">Engineering Leadership<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -231,7 +248,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Research, Development, & Scholarship <i class="val">75%</i></span>
+              <span class="skill">Scholarly Research & Development <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
