updating company links

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="section-title">
           <h2>About</h2>
 
-          <p>Currently providing engineering leadership to onshore and offshore engineering teams (30+ engineers) at <em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a></em>.</p>
+          <p>Currently providing engineering leadership to onshore and offshore engineering teams (30+ engineers) at <em><a href="https://www.sysco.com/about/company-profile/the-sysco-story" target="_blank">Sysco</a></em>.</p>
           </br>
           <p>Leading the engineering teams in designing, developing, and supporting a Kafka-based streaming platform, a Java/Node.js services layer, and a GraphQL-based orchestration layer, 
             with a focus on three of the most critical domains in Sysco's next-gen e-commerce platform (USD 50B+ revenue):</p>
@@ -277,9 +277,9 @@
               <h4>Pravinda Perera</h4>
               <p>
                 <em>
-                  I am a self-motivated, energetic, and inquisitive individual currently managing 3 engineering teams, with a total of 30+ onshore and offshore
+                  I am a self-motivated, energetic, and inquisitive individual currently leading 3 engineering teams, with a total of 30+ onshore and offshore
                   software engineers at
-                  <a href="https://www.sysco.com/" target="_blank">Sysco</a>.
+                  <a href="https://www.sysco.com/about/company-profile/the-sysco-story" target="_blank">Sysco</a>.
                 </em>
               </p>
               <ul>
@@ -292,7 +292,7 @@
             <div class="resume-item">
               <h4>Engineering Manager & Associate Software Architect</h4>
               <h5>July 2022 - Present</h5>
-              <p><em><a href="https://www.sysco.com/" target="_blank">Sysco</a> - United States</em></p>
+              <p><em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a> - United States</em></p>
               <ul>
                 <li>Currently managing & providing technical & architectural leadership for onshore and offshore engineering teams (31 engineers)
                   at Sysco, working towards internationalizing Sysco Shop application (process around USD 30B orders) which is the next-gen e-commerce platform for Sysco.</li>
@@ -309,7 +309,7 @@
             <div class="resume-item">
               <h4>Engineering Manager & Senior Technical Lead</h4>
               <h5>December 2021 - June 2022</h5>
-              <p><em><a href="https://www.sysco.com/" target="_blank">Sysco</a> - United States</em></p>
+              <p><em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a> - United States</em></p>
               <ul>
                 <li>Managed & provided technical & architectural leadership for two engineering teams (total of 21 engineering direct reports) at Sysco, working towards
                   internationalizing & personalizing Sysco Shop application (process around USD 30B orders).</li>
@@ -324,7 +324,7 @@
             <div class="resume-item">
               <h4>Engineering Manager & Senior Technical Lead</h4>
               <h5>August 2021 - November 2021</h5>
-              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li>Managed & provided technical & architectural leadership for a team of 11 engineers at Sysco LABS Technologies working towards
                   transforming Sysco Shop application to an e-commerce application as well as Sysco Delivery application feature enhancements.</li>
@@ -337,7 +337,7 @@
             <div class="resume-item">
               <h4>Engineering Manager & Technical Lead</h4>
               <h5>September 2020 - July 2021</h5>
-              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li> Led the project of internationalizing Sysco Delivery application by rolling it out to Canada.
                   This was the first multi-country (US & Canada) application developed by Sysco LABS Technologies - Customer Experience division.</li>
@@ -362,7 +362,7 @@
             <div class="resume-item">
               <h4>Engineering Manager & Associate Technical Lead</h4>
               <h5>August 2019 - August 2020</h5>
-              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li> Successfully managed and provided technical leadership in performing a major backend re-architecture impacting 20+ components.
                   Directly worked with the Head of Engineering for Sysco LABS Technologies - Customer Experience division on the re-architecture initiative
@@ -385,7 +385,7 @@
             <div class="resume-item">
               <h4>Senior Software Engineer</h4>
               <h5>December 2018 - July 2019</h5>
-              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li> Designed and developed Sysco Delivery web application. This application tracks over 65,000 deliveries daily.</li>
                 <li> Key contributor on changing Sysco Delivery application's persistent data storage from DynamoDB to MongoDB.</li>
@@ -400,7 +400,7 @@
             <div class="resume-item">
               <h4>Software Engineer</h4>
               <h5>April 2017 - November 2018</h5>
-              <p><em><a href="https://syscolabs.lk/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
                 <li> Key contributor in building Sysco Commission Calculator and Account Receivable Views for Sysco Shop web application.
                   A React-based frontend development and Java/Node JS based backend development.</li>
@@ -416,7 +416,7 @@
             <div class="resume-item">
               <h4>Software Engineering Intern</h4>
               <h5>October 2015 - April 2016</h5>
-              <p><em><a href="https://www.ifs.com/" target="_blank">IFS R&D International (Pvt) Ltd</a> - Sri Lanka</em></p>
+              <p><em><a href="https://www.linkedin.com/company/ifs/about/" target="_blank">IFS R&D International (Pvt) Ltd</a> - Sri Lanka</em></p>
               <ul>
                 <li> Research-based project - developed a treasury suite component for IFS Applications.</li>
               </ul>
